--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:challenge" : "jest -- booking_mapper property_mapper"
   },
   "keywords": [],
   "author": "",
